--- a/package.json
+++ b/package.json
@@ -11,24 +11,39 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@material-ui/core": "^4.12.4",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
-    "@mui/styles": "^5.11.2",
-    "@mui/x-data-grid": "^5.17.14",
     "@mui/x-data-grid-pro": "^5.17.15",
     "@mui/x-date-pickers": "^5.0.9",
+    "@types/jest": "^29.2.4",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "date-fns": "^2.29.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "draft-js": "^0.11.7",
+    "faker": "^5.5.3",
+    "framer-motion": "^8.0.2",
+    "react": "^18.0.0",
+    "react-big-calendar": "^1.5.2",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.41.1",
+    "react-modal": "^3.16.1",
+    "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
+    "uninstall": "^0.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^18.0.10",
     "@types/react-modal": "^3.13.1",
+    "jest": "^29.3.1",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^4.0.0"
   }
 }
