--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.2.4",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "chart.js": "^4.1.1",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "faker": "^5.5.3",
@@ -30,8 +31,7 @@
     "react-modal": "^3.16.1",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
-    "uninstall": "^0.0.0",
-    "yup": "^0.32.11"
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -44,6 +44,7 @@
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "yup": "^0.32.11"
   }
 }
