--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "faker": "^5.5.3",
     "framer-motion": "^8.0.2",
     "react": "^18.0.0",
+    "react-big-calendar": "^1.5.2",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.41.1",
     "react-modal": "^3.16.1",
@@ -41,7 +43,6 @@
     "@types/react-modal": "^3.13.1",
     "jest": "^29.3.1",
     "postcss": "^8.4.19",
-    "react-big-calendar": "^1.5.2",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
     "vite": "^4.0.0",
