--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@mui/styles": "^5.11.2",
     "@mui/x-data-grid-pro": "^5.17.15",
     "@mui/x-date-pickers": "^5.0.9",
     "@types/jest": "^29.2.4",
@@ -22,6 +23,7 @@
     "chart.js": "^4.1.1",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
+    "faker": "^5.5.3",
     "framer-motion": "^8.0.2",
     "react": "^18.0.0",
     "react-big-calendar": "^1.5.2",
@@ -37,10 +39,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/faker": "^6.6.9",
     "@types/react": "^17.0.52",
+    "@types/react-big-calendar": "^0.38.3",
     "@types/react-dom": "^18.0.10",
     "@types/react-modal": "^3.13.1",
-    "faker": "^6.6.6",
     "jest": "^29.3.1",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
