--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@mui/styles": "^5.11.2",
+    "@mui/types": "^7.2.3",
+    "@mui/x-data-grid": "^6.0.2",
     "@mui/x-data-grid-pro": "^5.17.15",
     "@mui/x-date-pickers": "^5.0.9",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/jest": "^29.2.4",
+    "@types/react-redux": "^7.1.25",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.1",
@@ -31,16 +35,20 @@
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.41.1",
+    "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
+    "redux": "^4.2.1",
     "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/date-fns": "^2.6.0",
     "@types/faker": "^6.6.9",
     "@types/react": "^17.0.52",
     "@types/react-big-calendar": "^0.38.3",
