--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "uninstall": "^0.0.0"
   },
   "devDependencies": {
